--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Landing-Page</title>
-  <link href="static/css/all.min.css" rel="stylesheet">
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="static/css/styles.css" rel="stylesheet">
+  <link href="landing-page/static/css/all.min.css" rel="stylesheet">
+  <link href="landing-page/static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="landing-page/static/css/styles.css" rel="stylesheet">
 </head>
 <body>
   <nav class="mb-4 border-bottom pb-3">
@@ -21,28 +21,28 @@
       </ul>
     </div>
   </nav>
-  <div class="container mt-4">
-    <img class="img-fluid col-md-8 mt-2 rounded" src="images/img.jpeg" alt="banner image">
+  <div class="container mt-4 mb-5">
+    <img class="img-fluid col-md-8 mt-2 rounded" src="landing-page/images/img.jpeg" alt="banner image">
     <div class="mt-md-3">
-      <p>A simple blog application for sharing ideas</p>
+      <p class="mt-2">A simple blog application for sharing ideas</p>
     </div>
     <div class="mt-md-3">
       <h2 id="features">Features</h2>
       <div class="container">
         <h5>View posts</h5>
-        <img class="img-fluid img-thumbnail col-md-8 mt-2 rounded" src="images/view-post.png" alt="banner image">
+        <img class="img-fluid img-thumbnail col-md-8 mt-2 rounded" src="landing-page/images/view-post.png" alt="banner image">
         <p class="mt-3">Any user is able to any post that have been authored by anyone. A list of the latest posts is displayed on the home page. One can also view posts created by a given user by checking out the user's profile page.</p>
         <hr class="mb-5">
         <h5>Create Posts</h5>
-        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="images/create post.png" alt="banner image">
+        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="landing-page/images/create post.png" alt="banner image">
         <p class="mt-3">This functionality is for authenticated users only. An authenticated user can be able to create a new post. The user can thereafter edit or even delete the post</p>
         <hr class="mb-5">
         <h5>Comment on posts</h5>
-        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="images/comment-on-post.png" alt="banner image">
+        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="landing-page/images/comment-on-post.png" alt="banner image">
         <p class="mt-3">Upon viewing a post, a user may decide to give feedback to the author. This feedback can be given through comments. The comment button is located at the very bottom of a blog post. This functionality is for authenticated users only.</p>
         <hr class="mb-5">
         <h5>Rest API</h5>
-        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="images/rest-api.png" alt="banner image">
+        <img class="img-fluid img-thumbnail  col-md-8 mt-2 rounded" src="landing-page/images/rest-api.png" alt="banner image">
         <p class="mt-3">The application also offers rest api endpoints. Through these endpoints, the user can be able to perform anything that they could perform through the application's frontend. It is useful for integration with third party systems and even automation of certain actions</p>
       </div>
     </div>
@@ -52,7 +52,7 @@
       <p>I have always liked using medium due to it's rich content and ease of use. To challenge myself, I decided that I was going to build a watered-down version using completely new technologies and within a timeframe of three weeks. The result of this is the BlogIt application. This is my final project for the foundations year at at <a href="https://www.holbertonschool.com/">Holberton school</a></p>
       <h5>Creators</h5>
       <p>Joshua Omari - <a href="https://github.com/joshua530"><i class="fa-lg fa-brands fa-github"></i></a> | <a
-          href="www.linkedin.com/in/joshua-omari-a8068a1a0"><i class="fa-lg fa-brands fa-linkedin"></i></a></p>
+          href="https://www.linkedin.com/in/joshua-omari-a8068a1a0"><i class="fa-lg fa-brands fa-linkedin"></i></a></p>
       <h5>Github link</h5>
       <p>The project's github repository can be found <a href="https://github.com/joshua530/BlogIt">Here</a></p>
     </div>
