update index page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container mt-5">
       <h2 id="about">About</h2>
       <h5>Inspiration</h5>
-      <p>I have always liked using medium due to it's rich content and ease of use. To challenge myself, I decided that I was going to build a watered-down version using completely new technologies and within a timeframe of three weeks. The result of this is the BlogIt application. This is my final project for the foundations year at at <a href="https://www.holbertonschool.com/">Holberton school</a></p>
+      <p>I have always liked using medium due to it's rich content and ease of use. With inspiration from medium, I decided to build a simple blog application using completely new technologies and within a timeframe of three weeks. The result of that is the BlogIt application. This is my final project for the foundations year at at <a href="https://www.holbertonschool.com/">Holberton school</a></p>
       <h5>Creators</h5>
       <p>Joshua Omari - <a href="https://github.com/joshua530"><i class="fa-lg fa-brands fa-github"></i></a> | <a
           href="https://www.linkedin.com/in/joshua-omari-a8068a1a0"><i class="fa-lg fa-brands fa-linkedin"></i></a></p>
