Remove invalid live site link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul class="d-flex flex-column flex-md-row justify-content-around navbar-nav">
         <li class="nav-item my-1 my-md-0 mx-2 mx-sm-3 mx-lg-5"><a href="#features">Features</a></li>
         <li class="nav-item my-1 my-md-0 mx-2 mx-sm-3 mx-lg-5"><a href="#about">About</a></li>
-        <li class="nav-item my-1 my-md-0 mx-2 mx-sm-3 mx-lg-5"><a href="http://52.23.173.85/">Live demo</a></li>
+        <!-- <li class="nav-item my-1 my-md-0 mx-2 mx-sm-3 mx-lg-5"><a href="#">Live demo</a></li> -->
       </ul>
     </div>
   </nav>
